--- a/static/client.html
+++ b/static/client.html
@@ -20,7 +20,7 @@
 
   <div>
     <label>Server (ws):</label>
-    <input id="server" value="ws://127.0.0.1:8000" />
+      <input id="server" value="wss://encrypted-chat-application.onrender.com/ws">
   </div>
   <div>
     <label>Room:</label>
